Alterando o TransactionController para utilizar o banco de dados